--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.swing-layout.classpath}:\
     ${file.reference.comm.jar}:\
-    ${file.reference.JTattoo.jar}
+    ${file.reference.JTattoo.jar}:\
+    ${libs.Calendar_Component_v.5.1_Professional.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
